# chromium-prebuilds

./: BUILD.gn  DEPS  README.md  common.gni  content.gni  v8.gni  webrtc.gni
.github/workflows/: prebuild.yml
arch/: arm.gni  x64.gni
environment/: device.gni
mode/: debug.gni
patches/: libc++-visibility.patch  libc++_visibility.patch  v8-tls-model.patch  view-examples-icu-dependency.patch
platform/: android.gni  darwin.gni  ios.gni
v8/: common.gni
