declare_args() {
  is_prebuild = false
}

group("prebuilds") {
  deps = []

  if (is_prebuild == "v8") {
    deps += [":v8"]
  }

  if (is_prebuild == "content") {
    deps += [":content"]
  }
}

static_library("libc++") {
  complete_static_lib = true

  public_deps = [
    "//buildtools/third_party/libc++",
  ]
}

if (is_prebuild == "v8") {
  static_library("v8") {
    complete_static_lib = true

    public_deps = [
      "//v8:v8",
      "//v8:v8_libplatform",
    ]
  }
}

if (is_prebuild == "content") {
  static_library("content") {
    complete_static_lib = true

    public_deps = [
      "//content/public/app",
      "//content/public/browser",
      "//content/public/child",
      "//content/public/common",
      "//content/public/gpu",
      "//content/public/renderer",
      "//content/public/utility",
    ]
  }
}
