declare_args() {
  is_prebuild = false
}

source_set("c++") {
  visibility = [":*"]

  public_deps = [
    "//buildtools/third_party/libc++",
  ]
}

if (is_prebuild == "v8") {
  static_library("v8") {
    complete_static_lib = true

    deps = [
      ":c++",

      "//v8:v8",
    ]
  }
}

if (is_prebuild == "content") {
  static_library("content") {
    complete_static_lib = true

    deps = [
      ":c++",

      "//content/public/app",
      "//content/public/browser",
      "//content/public/child",
      "//content/public/common",
      "//content/public/gpu",
      "//content/public/renderer",
      "//content/public/utility",
    ]

    if (is_mac) {
      deps += [
        "//base/allocator:early_zone_registration_mac",
      ]
    }
  }
}

if (is_prebuild == "webrtc") {
  static_library("webrtc") {
    complete_static_lib = true

    deps = [
      ":c++",

      "//third_party/webrtc_overrides:webrtc_component",
    ]
  }
}

group("prebuilds") {
  deps = []

  if (is_prebuild == "v8") {
    deps += [":v8"]
  }

  if (is_prebuild == "content") {
    deps += [":content"]
  }

  if (is_prebuild == "webrtc") {
    deps += [":webrtc"]
  }
}
