import("//prebuilds/common.gni")
import("//prebuilds/v8/common.gni")

is_prebuild = "v8"

# Expose V8 symbols to allow depending on them externally.
v8_expose_symbols = true

# Disable the memory sandbox.
v8_enable_sandbox = false

# Disable pointer compression.
# https://issues.chromium.org/issues/42212828
v8_enable_pointer_compression = false
